pp2/samples/jon_badswitch4.out

*** Error line 3.
    default: call(); break;
    ^^^^^^^
*** syntax error

